--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
@@ -896,7 +896,7 @@
 
                                     case 0xF6: // ERROR_CODE_NO_ANTENNA_PREVENTS_POWER_SETTING = 0xF6
                                         {
-                                            text = "Missing antenna prevents setting transmit power";
+                                            text = "Missing antenna prevents transmissions";
                                         }
                                         break;
 
